# hegemonie

./: Dockerfile  Makefile  README.md  TECH.md  docker-compose.yml  go.mod  go.sum
api/: auth.proto  event.proto  map.proto  region.proto
ci/: bootstrap.sh  run.sh
cmd/gen-map/: CMakeLists.txt  binding.h  fdp.go  fdp_cgo.go  fdp_test.go  generators.go  graph.go  id.go  main.go  physics.go  physics_test.go
cmd/gen-set/: gen-set.go  main.go
cmd/gen-set-1key/: main.go
cmd/hege/: main.go
cmd/hege-init/: main.go
cmd/hege-mapper/: commands.go
cmd/heged/: main.go
docs/: system-architecture.drawio  system-architecture.xml
docs/hegeIV/map/: calaquyr.json
pkg/auth/agent/: cmd_agent.go  handlers.go  handlers_auth.go  handlers_characters.go  handlers_user.go
pkg/auth/backend/: api.go  backend_test.go  mem.go  nyi.go
pkg/auth/client/: actions.go
pkg/event/agent/: cmd.go
pkg/event/backend-local/: base.go
pkg/event/client/: cmd.go
pkg/map/agent/: cmd.go  handlers_health.go  handlers_map.go
pkg/map/client/: actions.go  cmd.go  l0_seed.go  l1_raw.go  l2_mem.go
pkg/map/graph/: edges.go  map.go  map_test.go  map_types.go  persistence.go  rehash.go  repository.go  types.go
pkg/map/model/: edges.go  map.go  map_persist.go  map_test.go  map_types.go
pkg/map/utils/: final.go  raw.go
pkg/region/agent/: cmd.go  events.go  handlers_admin.go  handlers_army.go  handlers_city.go  handlers_defs.go  view.go
pkg/region/model/: army.go  army_test.go  city.go  persist.go  region.go  types.go  unit.go  world.go  (+3 more)
pkg/utils/: constants.go  metadata.go
(+10 files in other folders)
